<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/instruction"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:layout_marginTop="60dip"
        android:text="@string/instruction1"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/instruction2"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/instruction3"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/instruction4"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/instruction5"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/instruction6"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/instruction7"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/instruction8"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/instruction9"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/instruction10"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/instruction11"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/instruction12"
        android:textAppearance="@style/TextAppearance.AppCompat" />

</LinearLayout>